@@ -1,3 +1,8 @@
+2022-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STCompiler.m (compileStatements:blockFlag:, compileBlock:):
+    Refactor compilation of statements from blocks and methods.
+
 2019-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * STBytecodeInterpreter.m (dispatchBytecode:):
